[project]
name = "pyvegvesen"
version = "0.1.3"
description = ""
authors = [
    { name = "Anders Birkenes", email = "datagutten@datagutten.net" }
]
readme = "README.md"
dependencies = [
    "requests (>=2,<3)",
    "pydantic (>=2,<3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
